Edited examples/location.html via GitHub

--- a/examples/location.html
+++ b/examples/location.html
@@ -3,7 +3,7 @@
 <head>
   <script src="http://inc.the.tl/underscore.js"></script>
   <script src="http://inc.the.tl/jquery.js"></script>
-  <script src="drews-mixins.js"></script>
+  <script src="../drews-mixins.js"></script>
   <script type="text/javascript">
     $(document).ready(function(){
       navigator.geolocation.getCurrentPosition(function(position){
