--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -17,10 +17,17 @@
       context.strokeRect(0,  60, 150, 50);
       context.clearRect (30, 25,  90, 60);
       context.strokeRect(30, 25,  90, 60);
+      
+      $('#save').click(function(){
+        url = elem.toDataURL();
+        window.open(url, (new Date()).getTime())
+      })
+      
     });
   </script>
 </head>
 <body>
   <canvas id="canvas"></canvas>
+  <a href="#" id="save">save image</a>
 </body>
 </html>
