--- a/examples/ajax.html
+++ b/examples/ajax.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 <head>
@@ -13,7 +12,7 @@
       });
       var load = function() {
         $.ajax({
-          'url' : "todo.txt",
+          'url' : "dynamic.txt",
           'type' : "GET",
           'success': function(data) {
             $('#results').text(data);
